--- a/.github/workflows/client_ci.yml
+++ b/.github/workflows/client_ci.yml
@@ -1,10 +1,6 @@
 name: Node.js CI
 
-on:
-  push:
-    branches: [ ci-demo ]
-  pull_request:
-    branches: [ ci-demo ]
+on: [push, pull_request, workflow_dispatch]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
