--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -30,4 +30,4 @@ jobs:
         run: pip install -r requirements.txt 
         
       - name: Lint files
-        run: pylint **/*.py
+        run: pylint server
