--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@xendora/react-timer": "^1.1.0",
+    "bootstrap": "^4.6.0",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-scripts": "4.0.2",
