--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^4.0.2",
     "socket.io-client": "^3.1.1",
     "web-vitals": "^1.1.0"
   },
