--- a/package.json
+++ b/package.json
@@ -38,5 +38,12 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8081"
+  "name": "beat-the-keys",
+  "description": "Multiplayer Typeracing game",
+  "version": "1.0.0",
+  "engines": {
+    "npm": "6.14.10",
+    "node": "10.23.1"
+  },
+  "proxy": "http://localhost:8081/"
 }
