Icon selector displaying emojis

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@testing-library/user-event": "^12.6.3",
     "@xendora/react-timer": "^1.1.0",
     "bootstrap": "^4.6.0",
+    "emoji-mart": "^3.0.1",
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
