--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-google-login": "^5.2.2",
     "react-scripts": "^4.0.2",
     "socket.io-client": "^3.1.1",
+    "socket.io-mock": "^1.3.1",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
