--- a/requirements.txt
+++ b/requirements.txt
@@ -1,111 +1,6 @@
-aiohttp==3.7.4
-astroid==2.3.0
-async-timeout==3.0.1
-attrs==20.3.0
-Authlib==0.15.3
-awscli==1.18.217
-backcall==0.2.0
-bidict==0.21.2
-botocore==1.19.57
-certifi==2020.12.5
-cffi==1.14.5
-chardet==3.0.4
-click==7.1.2
-colorama==0.4.3
-contextvars==2.4
-coverage==5.5
-cryptography==3.4.6
-datadispatch==1.0.0
-decorator==4.4.2
-discord==1.0.1
-discord.py==1.6.0
-Django==2.0.2
-docutils==0.15.2
-Flask==1.1.2
-Flask-Cors==3.0.10
-Flask-SocketIO==5.0.1
-Flask-SQLAlchemy==2.1
-git-remote-codecommit==1.15.1
-h11==0.12.0
-httpcore==0.12.3
-httpx==0.16.1
-idna==3.1
-idna-ssl==1.1.0
-ikp3db==1.4.1
-immutables==0.15
-import-ipynb==0.1.3
-importlib-metadata==3.4.0
-Inflector==2.0.12
-ipython==7.16.1
-ipython-genutils==0.2.0
-isort==4.3.21
-itsdangerous==1.1.0
-jedi==0.11.1
-Jinja2==2.11.3
-jmespath==0.10.0
-jsonschema==3.2.0
-jupyter-core==4.7.1
-lazy-object-proxy==1.5.2
-MarkupSafe==1.1.1
-mccabe==0.6.1
-multidict==5.1.0
-mysql-connector==2.2.9
-mysql-connector-python==8.0.23
-nbformat==5.1.2
-npm==0.1.1
-numpy==1.19.5
-oauthlib==3.1.0
-optional-django==0.1.0
-parso==0.1.1
-pbr==5.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.11
-protobuf==3.15.3
-psycopg2-binary==2.8.6
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pycparser==2.20
-Pygments==2.7.4
-pylint==2.4.4
-pylint-django==2.3.0
-pylint-flask==0.6
-pylint-flask-sqlalchemy==0.2.0
-pylint-plugin-utils==0.6
-pyreadline==2.1
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-python-dotenv==0.15.0
-python-engineio==4.0.0
-python-socketio==5.0.4
-pytz==2020.5
-PyYAML==5.3.1
-requests==2.25.1
-requests-oauthlib==1.3.0
-rfc3986==1.4.0
-rsa==4.5
-s3transfer==0.3.4
-selenium==3.141.0
-semantic-version==2.8.5
-setuptools-rust==0.11.6
-six==1.15.0
-sniffio==1.2.0
-spotipy==2.16.1
-SQLAlchemy==1.3.23
-stevedore==3.3.0
-tasks==2.5.1
-tda-api==1.1.5
-toml==0.10.2
-traitlets==4.3.3
-typing-extensions==3.7.4.3
-urllib3==1.26.3
-virtualenv==16.2.0
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-wcwidth==0.2.5
-websockets==8.1
-Werkzeug==1.0.1
-wrapt==1.12.1
-yapf==0.31.0
-yarl==1.6.3
-zipp==3.4.0
+Flask
+Flask-SocketIO
+Flask-Cors
+Flask-SQLAlchemy
+psycopg2-binary
+python-dotenv
