changed server_ci a bit to try and fix github linting errors, whill remove if it breaks any workflows. Also, took out pylintrc from .gitignore to try to fix

--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -27,7 +27,7 @@ jobs:
           architecture: x64
           
       - name: Install dependencies
-        run: pip install -r requirements.txt 
+        run: pip install -r requirements.txt
         
       - name: Lint files
-        run: pylint server
+        run: pylint server --rcfile=.pylintrc ../server/pylintrc
