change to serverci code, made it so that only the directory name is showing for pylintrc path

--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -30,4 +30,4 @@ jobs:
         run: pip install -r requirements.txt
         
       - name: Lint files
-        run: pylint server --rcfile=.pylintrc ../server/pylintrc
+        run: pylint server --rcfile=.pylintrc ../server
