--- a/server/.pylintrc
+++ b/server/.pylintrc
@@ -234,7 +234,7 @@ ignore-on-opaque-inference=yes
 # List of class names for which member attributes should not be checked (useful
 # for classes with dynamically set attributes). This supports the use of
 # qualified names.
-ignored-classes=optparse.Values,thread._local,_thread._local
+ignored-classes=optparse.Values,thread._local,_thread._local,scoped_session,SQLAlchemy
 
 # List of module names for which member attributes should not be checked
 # (useful for modules/projects where namespaces are manipulated during runtime
@@ -580,5 +580,5 @@ preferred-modules=
 overgeneral-exceptions=BaseException,
                        Exception
 # Beat the Keys lint ignore list
-ignored-classes=scoped_session, SQLAlchemy
+# ignored-classes=scoped_session,SQLAlchemy
 min-public-methods=1
