added automating tests to our github CI, so on every PR we will also continuosly test our code

--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -31,3 +31,6 @@ jobs:
         
       - name: Lint files
         run: pylint server --rcfile=./server/.pylintrc
+
+      - name: Run Tests
+        run: python -m unittest
