--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -33,4 +33,4 @@ jobs:
         run: pylint server/app.py --rcfile=./server/.pylintrc
 
       - name: Run Tests
-        run: python -m unittest discover -s server/test
+        run: python -m unittest discover -s ./server/test -p '*_test.py'
