--- a/.github/workflows/server_ci.yml
+++ b/.github/workflows/server_ci.yml
@@ -33,5 +33,5 @@ jobs:
         run: pylint server/app.py --rcfile=./server/.pylintrc
       
       # removing automated test cases for now to pass all checks on github for final commit for milestone_1
-      # - name: Run Tests
-      #   run: python -m unittest discover -s ./server/test-p '*_test.py'
+      - name: Run Tests
+        run: python -m unittest discover -s ./server/test-p '*_test.py'
