--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-scripts": "^4.0.2",
+    "react-sweet-progress": "^1.1.2",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.0"
