--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@popperjs/core": "^2.9.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
@@ -13,6 +14,7 @@
     "react-chartjs-2": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
+    "react-native-leaderboard": "^1.0.6",
     "react-scripts": "^4.0.2",
     "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.3",
