--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^1.5.2",
     "react-bootstrap-dropdown-menu": "^1.1.23",
     "react-chartjs-2": "^3.0.3",
+    "react-countdown-circle-timer": "^2.5.2",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.2.2",
     "react-native-leaderboard": "^1.0.6",
